@@ -242,6 +242,14 @@ classes specified must provide the L<Alien::Base> interface for dynamic
 libraries, which is to say they should provide a method called
 C<dynamic_libs> that returns a list of dynamic libraries.
 
+[version 0.28]
+
+In 0.28 and later, if the L<Alien> is not installed then it will be
+ignored and this module will search in system or specified directories
+only.  This module I<will> still throw an exception, if the L<Alien>
+doesn't look like a module name or if it does not provide a C<dynamic_libs>
+method (which is implemented by all L<Alien::Base> subclasses).
+
 =back
 
 =cut
@@ -294,17 +302,21 @@ sub find_lib
 
   delete $missing{'*'};
 
-  foreach my $alien (@{ $args{alien} })
+  alien: foreach my $alien (@{ $args{alien} })
   {
     unless($alien =~ /^([A-Za-z_][A-Za-z_0-9]*)(::[A-Za-z_][A-Za-z_0-9]*)*$/)
     {
-        croak "Doesn't appear to be a valid Alien name $alien";
+      croak "Doesn't appear to be a valid Alien name $alien";
     }
     unless(eval { $alien->can('dynamic_libs') })
     {
-      my $pm = "$alien.pm";
-      $pm =~ s/::/\//g;
-      require $pm;
+      {
+        my $pm = "$alien.pm";
+        $pm =~ s/::/\//g;
+        local $@ = '';
+        eval { require $pm };
+        next alien if $@;
+      }
       unless(eval { $alien->can('dynamic_libs') })
       {
         croak "Alien $alien doesn't provide a dynamic_libs method";
